styling data fix and username+pass data visible

--- a/src/Components/DisplayEntries/DisplayEntries.scss
+++ b/src/Components/DisplayEntries/DisplayEntries.scss
@@ -23,10 +23,10 @@
   align-items: center;
   position: absolute;
   align-items: center;
-  top: 5vh;
-  left: 70vw;
+  top: 6vh;
+  left: 75vw;
   height: 60px;
-  width: 28vw;
+  width: 20vw;
   background: rgba(255, 253, 253, 0.814);
   border-radius: 30px;
   overflow-y: scroll;
